quelque ajustement apporter

--- a/front-end/index.html
+++ b/front-end/index.html
@@ -12,6 +12,16 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <!-- font pour chiffre -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
+    <!-- roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400;500;600;700&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <!-- fa-icon -->
+    <link rel="icon" href="/front-end/icon/fav-icon.png" type="image/png">
 
     <script src="scrypt.js" defer></script>
     <title>EsyShop</title>
@@ -23,13 +33,14 @@
         <ul>
             <li><a href="">Home</a></li>
             <li><a href="/front-end/produit/produit.html">Produit</a></li>
-            <li id="panier"><a href="">Panier</a><div id="notification">1</div></li>
+            <li id="panier"><a href="/front-end/panier/panier.html">Panier</a><div id="notification">1</div></li>
             <li><a href="">Suportclient</a></li>
             <li><a href="">Legal</a></li>
         </ul>
+        <!-- recherche -->
         <div class="recherche">
             <input type="text" name="" id="" placeholder="recherche">
-            <div class="btn"><img src="icon/icons8-loupe-50.png" alt=""></div>
+            <div class="btn"><img src="icon/icons8-loupe-blanc.png" alt=""><p>recherche</p></div>
         </div>
         
         <div class="user" id="userN">N</div>
@@ -50,6 +61,10 @@
         <div class="infoAcceuil">
             <div class="containere">
                 <h2 class="observer1">Votre boutique en ligne pour des produits de qualité <br> à des prix compétitifs.</h2>
+                <div class="recherche observer1">
+                    <input type="text" name="" id="" placeholder="recherche">
+                    <div class="btn"><img src="icon/icons8-loupe-blanc.png" alt=""><p style="letter-spacing: 0px;">recherche</p></div>
+                </div>
                 <div class="connection observer1">
                     <a href="../front-end/connection/index.html" >  <div class="seconnecter">Se connecter</div></a>
                     <a href="../front-end/inscription/inscription.html"><div class="sinscrire">S'inscrir</div></a>
@@ -167,6 +182,66 @@
                 </div>
             </div>
         </div>
+        <!-- new arival -->
+        <div id="nouveau-arv">
+            <h2 class="titles">nouvel arrivage></h2>
+            <div class="containerr">
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+                <div class="produit observer3 decalage">
+                    <div class="img"></div>
+                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="prix">$1800</div>
+                    <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
+                </div>
+            </div>
+        </div>
         <!-- categorie disponible -->
         <div id="categorie-dispo">
             <h2 class="titles">Categories ></h2>
@@ -238,8 +313,8 @@
             </div>
         </div>
         <!-- presentation de produit sur la page d'acceuil -->
+        <h2 class="titles" id="titre-produit-acc">Tout ></h2>
         <div id="presentation-produit">
-            <h2 class="titles">Tout ></h2>
             <div class="produit-container">
                 <a href="../front-end/produit-individuel/produit1.html">
                     <div class="produit observer3">
@@ -251,7 +326,7 @@
                 </a>
                 <div class="produit observer3 decalage">
                     <div class="img"></div>
-                    <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
+                    <div class="description"><p>une television smarte pour , pour une </p></div>
                     <div class="prix">$1800</div>
                     <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
                 </div>
@@ -424,6 +499,7 @@
                     <div class="panier"> <div class="lik">28 liks <img src="icon/icons8-coeurs-24.png" alt=""></div> <div class="btn"></div></div>
                 </div>
             </div>
+            <div id="voir-plus">Voir plus</div>
         </div>
         <!-- petite presentation de Esychop -->
         <div class="aboute"> 
@@ -529,11 +605,11 @@
     </div>
     <!-- menu du bas -->
     <div id="bootommenu">
-        <div><img src="icon/icons8-accueil-50.png" alt="">Home</div>
-        <div><img src="icon/icons8-produit-50.png" alt="">Produit</div>
-        <div><img src="icon/icons8-panier-50.png" alt="">Panier</div>
-        <div><img src="icon/icons8-service-client-50.png" alt="">Suportclient</div>
-        <div><img src="icon/icons8-loi-50.png" alt="">legal</div>
+        <div><a href="../front-end/index.html"><img src="icon/nav-icon/accueil-renplit.png" alt=""></a>Home</div>
+        <div><a href="../front-end/produit/produit.html"><img src="icon/nav-icon/produit.png" alt=""></a>Produit</div>
+        <div><a href="../front-end/panier/panier.html"><img src="icon/nav-icon/panier.png" alt=""></a>Panier</div>
+        <div><a href=""><img src="icon/icons8-service-client-50.png" alt=""></a>Suportclient</div>
+        <div><a href=""><img src="icon/icons8-loi-50.png" alt=""></a>legal</div>
     </div>
 </body>
 </html>
