--- a/front-end/panier/panier.html
+++ b/front-end/panier/panier.html
@@ -7,6 +7,15 @@
     <link rel="stylesheet" href="panier.css">
     <link rel="stylesheet" href="../style.css">
     <script src="../scrypt.js" defer></script>
+    <!-- font -->
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- navigation -->
@@ -39,8 +48,136 @@
     </nav>
     <!-- contenair -->
     <div id="container-principal">
-        <div class="left"></div>
-        <div class="rigth"></div>
+        <!-- contenaire de left contenent les produit et leur descriptions -->
+        <div class="left">
+            <div class="Allarticles">
+                <input type="checkbox" id="allchecbox">
+                <h3>TOUS LES ARTICLES ( <span>4</span> )</h3>
+            </div>
+            <!--  -->
+            <div class="articles">
+                <div class="check-title">
+                    <input type="checkbox">
+                    <div class="titr-icon"><img src="../icon/icons8-boutique-en-ligne-sac-à-provisions-50 (1).png" alt=""><h4>Casque ></h4></div>
+                </div>
+                <div class="img-description">
+                    <div class="img" ></div>
+                    <div class="description">
+                        <div class="top">
+                            <p>Découvrez notre conçu pour offrir [le bénéfice principal] dans chaque utilisation. Fabriqué à partir de [matériaux ou ingrédients de qualité, p.ex., matériaux durables ou ingrédients naturels], e</p>
+                            <div class="modifier">Modifier</div>
+                        </div>
+                        <div class="botom">
+                            <div id="prix"> <span>120 000fcfa</span> </div>
+                            <div id="Q-delete">
+                                <select id="Q">
+                                    <option value="1">Qty: 1</option>
+                                    <option value="2">Qty: 2</option>
+                                    <option value="3">Qty: 3</option>
+                                    <option value="4">Qty: 4</option>
+                                    <option value="5">Qty: 5</option>
+                                </select>
+                                <div id="delete"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class="articles">
+                <div class="check-title">
+                    <input type="checkbox">
+                    <div class="titr-icon"><img src="../icon/icons8-boutique-en-ligne-sac-à-provisions-50 (1).png" alt=""><h4>Airpode ></h4></div>
+                </div>
+                <div class="img-description">
+                    <div class="img" style="background-image: url(../images/airpode.png);"></div>
+                    <div class="description">
+                        <div class="top">
+                            <p>Découvrez notre conçu pour offrir [le bénéfice principal] dans chaque utilisation. Fabriqué à partir de [matériaux ou ingrédients de qualité, p.ex., matériaux durables ou ingrédients naturels], e</p>
+                            <div class="modifier">Modifier</div>
+                        </div>
+                        <div class="botom">
+                            <div id="prix"> <span>120 000fcfa</span> </div>
+                            <div id="Q-delete">
+                                <select id="Q">
+                                    <option value="1">Qty: 1</option>
+                                    <option value="2">Qty: 2</option>
+                                    <option value="3">Qty: 3</option>
+                                    <option value="4">Qty: 4</option>
+                                    <option value="5">Qty: 5</option>
+                                </select>
+                                <div id="delete"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class="articles">
+                <div class="check-title">
+                    <input type="checkbox">
+                    <div class="titr-icon"><img src="../icon/icons8-boutique-en-ligne-sac-à-provisions-50 (1).png" alt=""><h4>ceinture ></h4></div>
+                </div>
+                <div class="img-description">
+                    <div class="img" style="background-image: url(../images/Mac.jpg);"></div>
+                    <div class="description">
+                        <div class="top">
+                            <p>Découvrez notre conçu pour offrir [le bénéfice principal] dans chaque utilisation. Fabriqué à partir de [matériaux ou ingrédients de qualité, p.ex., matériaux durables ou ingrédients naturels], e</p>
+                            <div class="modifier">Modifier</div>
+                        </div>
+                        <div class="botom">
+                            <div id="prix"> <span>120 000fcfa</span> </div>
+                            <div id="Q-delete">
+                                <select id="Q">
+                                    <option value="1">Qty: 1</option>
+                                    <option value="2">Qty: 2</option>
+                                    <option value="3">Qty: 3</option>
+                                    <option value="4">Qty: 4</option>
+                                    <option value="5">Qty: 5</option>
+                                </select>
+                                <div id="delete"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+            <div class="articles">
+                <div class="check-title">
+                    <input type="checkbox">
+                    <div class="titr-icon"><img src="../icon/icons8-boutique-en-ligne-sac-à-provisions-50 (1).png" alt=""><h4>Iphone16 ></h4></div>
+                </div>
+                <div class="img-description">
+                    <div class="img" style="background-image: url(../images/haut-parleur.png);"></div>
+                    <div class="description">
+                        <div class="top">
+                            <p>Découvrez notre conçu pour offrir [le bénéfice principal] dans chaque utilisation. Fabriqué à partir de [matériaux ou ingrédients de qualité, p.ex., matériaux durables ou ingrédients naturels], e</p>
+                            <div class="modifier">Modifier</div>
+                        </div>
+                        <div class="botom">
+                            <div id="prix"> <span>120 000fcfa</span> </div>
+                            <div id="Q-delete">
+                                <select id="Q">
+                                    <option value="1">Qty: 1</option>
+                                    <option value="2">Qty: 2</option>
+                                    <option value="3">Qty: 3</option>
+                                    <option value="4">Qty: 4</option>
+                                    <option value="5">Qty: 5</option>
+                                </select>
+                                <div id="delete"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!--  -->
+        </div>
+        <div class="rigth">
+            <div id="resume">
+                <div class="resume"></div>
+                <div class="payement"></div>
+            </div>
+        </div>
     </div>
 
 
@@ -63,11 +200,11 @@
 
     <!-- menu du bas -->
     <div id="bootommenu">
-        <div><img src="../icon/icons8-accueil-50.png" alt="">Home</div>
-        <div><img src="../icon/icons8-produit-50.png" alt="">Produit</div>
-        <div><img src="../icon/icons8-panier-50.png" alt="">Panier</div>
-        <div><img src="../icon/icons8-service-client-50.png" alt="">Suportclient</div>
-        <div><img src="../icon/icons8-loi-50.png" alt="">legal</div>
+        <div><a href="../index.html"><img src="../icon/nav-icon/home.png" alt=""></a>Home</div>
+        <div><a href="../produit/produit.html"><img src="../icon/nav-icon/produit.png" alt=""></a>Produit</div>
+        <div><a href="../panier/panier.html"><img src="../icon/nav-icon/panier-remplit.png" alt=""></a>Panier</div>
+        <div><a href=""><img src="../icon/icons8-service-client-50.png" alt=""></a>Suportclient</div>
+        <div><a href=""><img src="../icon/icons8-loi-50.png" alt=""></a>legal</div>
     </div>
 </body>
 </html>
