--- a/front-end/inscription/inscription.html
+++ b/front-end/inscription/inscription.html
@@ -14,7 +14,10 @@
 </head>
 <body>
         <div class="container">
-                <h2>S'inscrire</h2>
+                <div id="titr">
+                    <h2>S'inscrire</h2>
+                    <img src="../icon/icons8-s'inscrire-50.png" alt="">
+                </div>
                 <form action="">
                     <div class="region">
                         <label for="">Pays / Région :</label>
@@ -118,14 +121,6 @@
 
                     <input type="submit" value="Accepter et S'inscrire" required>
                 </form>
-                <ul id="divbacgroud">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                </ul>
-                <div id="blur"></div>
         </div>
 </body>
 </html>
