--- a/front-end/produit-individuel/produit1.html
+++ b/front-end/produit-individuel/produit1.html
@@ -66,7 +66,7 @@
     <nav>
         <p id="logo">EsyShop</p>
         <ul>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a href="/front-end/produit/produit.html">Produit</a></li>
             <li id="panier"><a href="">Panier</a><div id="notification">1</div></li>
             <li><a href="">Suportclient</a></li>
@@ -74,7 +74,7 @@
         </ul>
         <div class="recherche">
             <input type="text" name="" id="" placeholder="recherche">
-            <div class="btn"><img src="../icon/icons8-loupe-50.png" alt=""></div>
+            <div class="btn"><img src="../icon/icons8-loupe-blanc.png" alt=""><p>recherche</p></div>
         </div>
         
         <div class="user" id="userN">N</div>
@@ -471,11 +471,11 @@
     </div>
     <!-- menu du bas -->
     <div id="bootommenu">
-        <div><img src="../icon/icons8-accueil-50.png" alt="">Home</div>
-        <div><img src="../icon/icons8-produit-50.png" alt="">Produit</div>
-        <div><img src="../icon/icons8-panier-50.png" alt="">Panier</div>
-        <div><img src="../icon/icons8-service-client-50.png" alt="">Suportclient</div>
-        <div><img src="../icon/icons8-loi-50.png" alt="">legal</div>
+        <div><a href="../../index.html"><img src="../icon/nav-icon/home.png" alt=""></a>Home</div>
+        <div><a href="../produit/produit.html"><img src="../icon/nav-icon/produit.png" alt=""></a>Produit</div>
+        <div><a href="../panier/panier.html"><img src="../icon/nav-icon/panier.png" alt=""></a>Panier</div>
+        <div><a href="../messagerie/message.html"><img src="../icon/nav-icon/icons8-message-50.png" alt=""></a>Suportclient</div>
+        <div><a href=""><img src="../icon/icons8-loi-50.png" alt=""></a>legal</div>
     </div>
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
