--- a/front-end/produit/produit.html
+++ b/front-end/produit/produit.html
@@ -39,7 +39,7 @@
     <!-- slider style -->
     <style>
         .swiper {
-            height: 300px!important;
+            height: 300px;
             width: 98%;
             margin-top: 50px;
         }
@@ -65,9 +65,9 @@
     <nav>
         <p id="logo">EsyShop</p>
         <ul>
-            <li><a href="/front-end/index.html">Home</a></li>
+            <li><a href="../../index.html">Home</a></li>
             <li><a href="">Produit</a></li>
-            <li id="panier"><a href="">Panier</a><div id="notification">1</div></li>
+            <li id="panier"><a href="../panier/panier.html">Panier</a><div id="notification">1</div></li>
             <li><a href="">Suportclient</a></li>
             <li><a href="">Legal</a></li>
         </ul>
@@ -146,7 +146,7 @@
         </div>
         <!-- petit titre d'intro -->
         <div id="titrecontainer">
-            <h2><img src="../icon/icons8-rose-emoji-48.png" alt="">Économisez facilement avec Esychop ! <img src="../icon/icons8-rose-emoji-48.png" alt=""></h2>
+            <h2>Économisez facilement avec Esychop !</h2>
             <p>Explore tes centres d'intérêt</p>
         </div>
         <div id="produit-container">
@@ -363,10 +363,10 @@
 
     <!-- menu du bas -->
     <div id="bootommenu">
-        <div><a href="../index.html"><img src="../icon/nav-icon/home.png" alt=""></a>Home</div>
+        <div><a href="../../index.html"><img src="../icon/nav-icon/home.png" alt=""></a>Home</div>
         <div><a href="../produit/produit.html"><img src="../icon/nav-icon/produit-remplit.png" alt=""></a>Produit</div>
         <div><a href="../panier/panier.html"><img src="../icon/nav-icon/panier.png" alt=""></a>Panier</div>
-        <div><a href=""><img src="../icon/icons8-service-client-50.png" alt=""></a>Suportclient</div>
+        <div><a href="../messagerie/message.html"><img src="../icon/nav-icon/icons8-message-50.png" alt=""></a>message</div>
         <div><a href=""><img src="../icon/icons8-loi-50.png" alt=""></a>legal</div>
     </div>
 
