--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/front-end/style.css">
     <!-- font -->
-    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&display=swap" rel="stylesheet">
@@ -23,7 +23,9 @@
     <!-- fa-icon -->
     <link rel="icon" href="/front-end/icon/fav-icon.png" type="image/png">
 
-    <script src="scrypt.js" defer></script>
+
+    <script src="/front-end/scriptHaume.js" defer></script>
+    <script src="/front-end/scrypt.js" defer></script>
     <title>EsyShop</title>
 </head>
 <body>
@@ -31,10 +33,10 @@
     <nav>
         <p id="logo">EsyShop</p>
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="/front-end/produit/produit.html">Produit</a></li>
             <li id="panier"><a href="/front-end/panier/panier.html">Panier</a><div id="notification">1</div></li>
-            <li><a href="">Suportclient</a></li>
+            <li><a href="">message</a></li>
             <li><a href="">Legal</a></li>
         </ul>
         <!-- recherche -->
@@ -604,10 +606,10 @@
     </div>
     <!-- menu du bas -->
     <div id="bootommenu">
-        <div><a href="../front-end/index.html"><img src="icon/nav-icon/accueil-renplit.png" alt=""></a>Home</div>
-        <div><a href="../front-end/produit/produit.html"><img src="icon/nav-icon/produit.png" alt=""></a>Produit</div>
-        <div><a href="../front-end/panier/panier.html"><img src="icon/nav-icon/panier.png" alt=""></a>Panier</div>
-        <div><a href=""><img src="icon/icons8-service-client-50.png" alt=""></a>Suportclient</div>
+        <div><a href="index.html"><img src="/front-end/icon/nav-icon/accueil-renplit.png" alt=""></a>Home</div>
+        <div><a href="/front-end/produit/produit.html"><img src="/front-end/icon/nav-icon/produit.png" alt=""></a>Produit</div>
+        <div><a href="/front-end/panier/panier.html"><img src="/front-end/icon/nav-icon/panier.png" alt=""></a>Panier</div>
+        <div><a href="/front-end/messagerie/message.html"><img src="/front-end/icon/nav-icon/icons8-message-50.png" alt=""></a>massage</div>
         <div><a href=""><img src="icon/icons8-loi-50.png" alt=""></a>legal</div>
     </div>
 </body>
