correction des root vers les autre pages

--- a/front-end/produit-individuel/produit1.html
+++ b/front-end/produit-individuel/produit1.html
@@ -67,7 +67,7 @@
         <p id="logo">EsyShop</p>
         <ul>
             <li><a href="../../index.html">Home</a></li>
-            <li><a href="/front-end/produit/produit.html">Produit</a></li>
+            <li><a href="./front-end/produit/produit.html">Produit</a></li>
             <li id="panier"><a href="">Panier</a><div id="notification">1</div></li>
             <li><a href="">Suportclient</a></li>
             <li><a href="">Legal</a></li>
