--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/front-end/style.css">
+    <link rel="stylesheet" href="./front-end/style.css">
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,8 +24,8 @@
     <link rel="icon" href="/front-end/icon/fav-icon.png" type="image/png">
 
 
-    <script src="/front-end/scriptHaume.js" defer></script>
-    <script src="/front-end/scrypt.js" defer></script>
+    <script src="./front-end/scriptHaume.js" defer></script>
+    <script src="./front-end/scrypt.js" defer></script>
     <title>EsyShop</title>
 </head>
 <body>
@@ -505,25 +505,25 @@
         <!-- petite presentation de Esychop -->
         <div class="aboute"> 
             <div class="item observer2"> 
-                <div class="icon"><img src="icon/icons8-qualité-48.png" alt=""></div>
+                <div class="icon"><img src="./front-end/icon/icons8-qualité-48.png" alt=""></div>
                 <h2>Qualité des produits</h2>
                 <p>Chez Esychop, nous nous engageons à offrir des produits de haute qualité, soigneusement sélectionnés et testés pour répondre aux besoins de nos clients. Que ce soit dans la mode, les accessoires ou l'électronique, nous garantissons des articles durables et fiables</p>
             </div>
 
             <div class="item observer2">
-                <div class="icon"><img src="icon/icons8-livraison-100.png" alt=""></div>
+                <div class="icon"><img src="./front-end/icon/icons8-livraison-100.png" alt=""></div>
                 <h2>Livraison rapide</h2>
                 <p>Nous savons à quel point il est important de recevoir vos commandes à temps. C'est pourquoi nous proposons une livraison rapide et flexible. Choisissez entre la livraison à domicile ou en point de retrait, selon ce qui vous convient le mieux.</p>
             </div>
 
             <div class="item observer2">
-                <div class="icon"><img src="icon/icons8-service-client-50 (1).png" alt=""></div>
+                <div class="icon"><img src="./front-end/icon/icons8-service-client-50 (1).png" alt=""></div>
                 <h2>Service client réactif</h2>
                 <p>Notre service client est disponible 24 heures sur 24, 7 jours sur 7 pour vous assister. Que vous ayez une question sur un produit, un problème avec une commande ou besoin de conseils, notre équipe est là pour vous répondre rapidement et efficacement.</p>
             </div>
 
             <div class="item observer2">
-                <div class="icon"><img src="icon/icons8-carte-utilisée-48.png" alt=""></div>
+                <div class="icon"><img src="./front-end/icon/icons8-carte-utilisée-48.png" alt=""></div>
                 <h2>Paiements sécurisés</h2>
                 <p>La sécurité de vos transactions est notre priorité. Nous utilisons des systèmes de paiement sécurisés et cryptés pour protéger vos informations personnelles. Vous pouvez acheter en toute confiance avec des méthodes de paiement reconnues et fiables.</p>
             </div>
@@ -607,9 +607,9 @@
     <!-- menu du bas -->
     <div id="bootommenu">
         <div><a href="index.html"><img src="/front-end/icon/nav-icon/accueil-renplit.png" alt=""></a>Home</div>
-        <div><a href="/front-end/produit/produit.html"><img src="/front-end/icon/nav-icon/produit.png" alt=""></a>Produit</div>
-        <div><a href="/front-end/panier/panier.html"><img src="/front-end/icon/nav-icon/panier.png" alt=""></a>Panier</div>
-        <div><a href="/front-end/messagerie/message.html"><img src="/front-end/icon/nav-icon/icons8-message-50.png" alt=""></a>massage</div>
+        <div><a href="./front-end/produit/produit.html"><img src="./front-end/icon/nav-icon/produit.png" alt=""></a>Produit</div>
+        <div><a href="./front-end/panier/panier.html"><img src="./front-end/icon/nav-icon/panier.png" alt=""></a>Panier</div>
+        <div><a href="./front-end/messagerie/message.html"><img src="./front-end/icon/nav-icon/icons8-message-50.png" alt=""></a>massage</div>
         <div><a href=""><img src="icon/icons8-loi-50.png" alt=""></a>legal</div>
     </div>
 </body>
