--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- recherche -->
         <div class="recherche">
             <input type="text" name="" id="" placeholder="recherche">
-            <div class="btn"><img src="icon/icons8-loupe-blanc.png" alt=""><p>recherche</p></div>
+            <div class="btn"><img src="./front-end/icon/icons8-loupe-blanc.png" alt=""><p>recherche</p></div>
         </div>
         
         <div class="user" id="userN">N</div>
@@ -606,7 +606,7 @@
     </div>
     <!-- menu du bas -->
     <div id="bootommenu">
-        <div><a href="index.html"><img src="/front-end/icon/nav-icon/accueil-renplit.png" alt=""></a>Home</div>
+        <div><a href="./index.html"><img src="./front-end/icon/nav-icon/accueil-renplit.png" alt=""></a>Home</div>
         <div><a href="./front-end/produit/produit.html"><img src="./front-end/icon/nav-icon/produit.png" alt=""></a>Produit</div>
         <div><a href="./front-end/panier/panier.html"><img src="./front-end/icon/nav-icon/panier.png" alt=""></a>Panier</div>
         <div><a href="./front-end/messagerie/message.html"><img src="./front-end/icon/nav-icon/icons8-message-50.png" alt=""></a>massage</div>
