--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <div class="btn"><img src="icon/icons8-loupe-blanc.png" alt=""><p style="letter-spacing: 0px;">recherche</p></div>
                 </div>
                 <div class="connection observer1">
-                    <a href="../front-end/connection/index.html" >  <div class="seconnecter">Se connecter</div></a>
-                    <a href="../front-end/inscription/inscription.html"><div class="sinscrire">S'inscrir</div></a>
+                    <a href="./front-end/connection/index.html" >  <div class="seconnecter">Se connecter</div></a>
+                    <a href="./front-end/inscription/inscription.html"><div class="sinscrire">S'inscrir</div></a>
                 </div>
             </div>
         </div>
@@ -317,7 +317,7 @@
         <h2 class="titles" id="titre-produit-acc">Tout ></h2>
         <div id="presentation-produit">
             <div class="produit-container">
-                <a href="../front-end/produit-individuel/produit1.html">
+                <a href="./front-end/produit-individuel/produit1.html">
                     <div class="produit observer3">
                         <div class="img"></div>
                         <div class="description"><p>une television smarte pour , pour une experiance visuel incomparable sjygshdfjsguidhfshuidfhuishf sygshfuhgshdgiyf</p></div>
