--- a/front-end/produit/produit.html
+++ b/front-end/produit/produit.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="produit-stile.css">
     <script src="../scrypt.js" defer></script>
+    <script src="produit-scrypt.js"></script>
 
     <!-- font -->
     <link rel="stylesheet" href="style.css">
